<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        app:layout_anchor="@id/mainLayout"
        app:layout_anchorGravity="top"
        app:title="@string/app_name"
        app:titleTextColor="@color/textPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:background="#000341"
        android:orientation="horizontal"
        app:layout_anchor="@id/mainLayout"
        app:layout_anchorGravity="top">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/str1"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str2"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str3"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="110dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_24dp"
        app:layout_anchor="@id/mainLayout"
        app:layout_anchorGravity="right|bottom"
        android:layout_gravity="right|bottom" />
</FrameLayout>

    <!--
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

    -->
