<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        app:title="設備詳細資料"
        app:titleTextColor="@color/textPrimary" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_gravity="top">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str6"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str7"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str8"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str9"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str10"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str11"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str12"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/str13"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="100dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="陽台"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="XXXXX"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="100%"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="0.0.0.0"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="MAC"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="70%"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="正常"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="無淹水"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="left|top" />
    </LinearLayout>

</FrameLayout>